removing layout workaround - pairing w/ @alvarocavalcanti

--- a/app/views/articles/filter.html.erb
+++ b/app/views/articles/filter.html.erb
@@ -23,7 +23,7 @@
                   </li>
               <% end %>
             <% else %>
-            <li><span class="category">No articles could be found.</span><span style="color: #ffffff">No articles could be found.No articles could be found.No articles could be found.No articles could be found.No articles could be found.No articles could be found.No articles could be found.No articles could be found.No articles could be found.No articles could be found.No articles could be found.</span></li>
+            <li><span class="category">No articles could be found.</span></li>
           <% end %>
             </ul>
           </div>
