--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -28,8 +28,7 @@
             <li>The OD4D Platform</li>
             </ul>
             <p>The OD4D website was created in the project “Open Data for Public Policy in Latin America” – which was implemented from 2011 to 2013. This was a partnership with the Economic Commission for Latin America and the Caribbean (<a href="http://www.cepal.org/" title="CEPAL  - 
-          Comisión Económica para América Latina y el Caribe">ECLAC</a>) and funded by the International Development Research Center of Canada (<a href="http://www.idrc.ca/EN/Pages/default.aspx" title="IDRC - 
-  International Development Research Centre">IDRC</a>). Achievements include the first R<a href="http://confdatosabiertos.uy/" title="Inicio">egional Conference for Latin America and the Caribbean</a>; among many other actions.
+          Comisión Económica para América Latina y el Caribe">ECLAC</a>) and funded by the International Development Research Center of Canada (<a href="http://www.idrc.ca/EN/Pages/default.aspx" title="IDRC - International Development Research Centre">IDRC</a>). Achievements include the first <a href="http://confdatosabiertos.uy/" title="Inicio">Regional Conference for Latin America and the Caribbean</a>; among many other actions.
             For more information on the broad OD4D initiatives, please visit www.od4d.org</p>
 
             <h1 class="title blackgrayfont grid-100"><%= t('about_title') %></h1>
