--- a/app/views/casein/layouts/_tab_navigation.html.erb
+++ b/app/views/casein/layouts/_tab_navigation.html.erb
@@ -1,5 +1,5 @@
 <!-- NOTE: the casein:scaffold generator automatically appends new controllers to this file. The SCAFFOLD_INSERT line must NOT be removed -->
 <!-- SCAFFOLD_INSERT -->
-<li id="tab-languages"><%= link_to "Languages", casein_languages_path %></li>
+<li id="tab-languages"><%= link_to "Linguagens", casein_languages_path %></li>
 <li id="tab-post_sections"><%= link_to "Seções", casein_post_sections_path %></li>
 <li id="tab-posts"><%= link_to "Posts", casein_posts_path %></li>
