--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -13,7 +13,7 @@
     <div class="grid-container content">
       <p class="breadcrumb breadcrumb-default">
       <%= link_to t('home'), controller: "home", action: "index" %>
-       | <a href="#"><%= t('about').upcase %></a>
+       | <a href="#"><%= t('about').mb_chars.upcase %></a>
       </p>
       <div class="">
         <div class="grid-100">
