--- a/app/views/articles/filter.html.erb
+++ b/app/views/articles/filter.html.erb
@@ -6,16 +6,16 @@
         <section class="content grid-70 bgwhite">
           <div class="post-list-content-inner">
             <p class="breadcrumb breadcrumb-default">
-              <%= link_to t('home'), {controller: "home", action: "index"} %> | <a href="#"><%= params[:term].upcase %></a>
+              <%= link_to t('home'), {controller: "home", action: "index"} %> | <a href="#"><%= params[:term].mb_chars.upcase %></a>
             </p>
-            <h2 class="title blackgrayfont"><%= params[:term].upcase %></h2>
+            <h2 class="title blackgrayfont"><%= params[:term].mb_chars.upcase %></h2>
             <h4 class="subtitle"><%= @description %></h4>
 
             <ul class="list-post-ul">
             <% if @articles && @articles.size > 0 %>
               <% @articles.each do |article| %>
                   <li>
-                      <span class="category"><%= article.articleSection.first.upcase %></span>
+                      <span class="category"><%= article.articleSection.first.mb_chars.upcase %></span>
                       <%= link_to raw("<h3 class='title-item'>#{article.title}</h3>"), controller: "articles", action: "show", params: {uri: "#{article.url}"} %>
                       <p class="fontitalic"><%= article.article_content_without_html[0..350] %>
                         <%= link_to "[...] #{t('read_more')}", controller: "articles", action: "show", params: {uri: "#{article.url}"} %></p>
