--- a/app/views/layouts/_followus.html.erb
+++ b/app/views/layouts/_followus.html.erb
@@ -11,10 +11,10 @@
 	end
 %>
 <ul class="social-list-link">
-	<a target="_blank" href="<%= link_twitter %>"><li class="twitter"></li></a>
-	<a target="_blank" href="<%= link_facebook %>"><li class="facebook"></li></a>
-	<a target="_blank" href="<%= link_gplus %>"><li class="gplus"></li></a>
+	<a target="_blank" href="<%= link_twitter %>" title="<%= t('share_twitter') %>"><li class="twitter"></li></a>
+	<a target="_blank" href="<%= link_facebook %>" title="<%= t('share_facebook') %>"><li class="facebook"></li></a>
+	<a target="_blank" href="<%= link_gplus %>" title="<%= t('share_gplus') %>"><li class="gplus"></li></a>
 	<% if footer %>
-		<a target="_blank" href="https://github.com/W3CBrasil"><li class="github"></li></a>
+		<a target="_blank" href="https://github.com/W3CBrasil" title="GitHub"><li class="github"></li></a>
 	<% end %>
 </ul>
