--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -153,14 +153,14 @@
         <%= t('featured_section').mb_chars.upcase %></a> <span class="semiboldfont">&gt;&gt;</span></h3>
       <div class="destaquegov grid-33">
           <h4 class="news-title-item title-item-destaque"><%= t('watch_out') %></h4>
-          <img src="<%= asset_path 'shutterstock_114997978-b.jpg' %>" alt="" />
+          <img src="<%= asset_path 'shutterstock_114997978-b.jpg' %>" title="This is a placeholder image" />
           <h5 class="news-title-item"><%= t('featured_about_1').mb_chars.upcase %></h5>
           <p class="news-txt-larger"><%= link_to t('featured_article_1'), {controller: "articles", action: "show", params: {uri: "http://platform.od4d.org/posts/43"}} %></p>
       </div>
 
       <div class="destaque2gov grid-33">
         <div class="destaquemenor">
-          <img src="<%= asset_path 'shutterstock_173451446-b.jpg' %>" alt="">
+          <img src="<%= asset_path 'shutterstock_173451446-b.jpg' %>" title="This is a placeholder image">
           <h5 class="news-title-item"><%= t('featured_about_2').mb_chars.upcase %></h5>
           <p class="news-txt-larger"><%= link_to t('featured_article_2'), {controller: "pages", action: "about"} %></p>
         </div>
@@ -213,7 +213,7 @@
       <div class="resp-tabs-container bggreen">
           <div class="text-tab clearfix">
             <div class="text-tab clearfix">
-              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_1') %></h4>
               <p><%= raw t('cases_text_1') %></p>
                 <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/8'}}, class: 'casos-praticos-link' %>
@@ -221,7 +221,7 @@
           </div>
           <div>
               <div class="text-tab clearfix">
-              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_2') %></h4>
               <p><%= t('cases_text_2') %></p>
               <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/33'}}, class: 'casos-praticos-link' %>
@@ -229,7 +229,7 @@
           </div>
           <div>
               <div class="text-tab clearfix">
-              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_3') %></h4>
               <p><%= t('cases_text_3') %></p>
               <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/48'}}, class: 'casos-praticos-link' %>
@@ -237,7 +237,7 @@
           </div>
           <div>
               <div class="text-tab clearfix">
-              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_4') %></h4>
               <p><%= t('cases_text_4') %></p>
               <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/1'}}, class: 'casos-praticos-link' %>
@@ -245,7 +245,7 @@
           </div>
           <div>
               <div class="text-tab clearfix">
-              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_5') %></h4>
               <p><%= t('cases_text_5') %></p>
               <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/30'}}, class: 'casos-praticos-link' %>
