fix twitter account

--- a/app/views/layouts/_followus.html.erb
+++ b/app/views/layouts/_followus.html.erb
@@ -5,7 +5,7 @@
 		link_gplus = @article.share_googleplus
 	else
 		od4d_link = "http://platform.od4d.org"
-		link_twitter = "https://twitter.com/intent/tweet?url=#{URI.escape(od4d_link)}&text=#{t('od4d_title')}&via=OD4D"
+		link_twitter = "https://twitter.com/intent/tweet?url=#{URI.escape(od4d_link)}&text=#{t('od4d_title')}&via=od4_d"
 		link_facebook = "https://www.facebook.com/sharer/sharer.php?u=#{URI.escape(od4d_link)}"
 		link_gplus = "https://plusone.google.com/_/+1/confirm?hl=en&url=#{URI.escape(od4d_link)}"
 	end
