--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -155,7 +155,7 @@
           <h4 class="news-title-item title-item-destaque"><%= t('watch_out') %></h4>
           <img src="<%= asset_path 'shutterstock_114997978-b.jpg' %>" title="This is a placeholder image" />
           <h5 class="news-title-item"><%= t('featured_about_1').mb_chars.upcase %></h5>
-          <p class="news-txt-larger"><%= link_to t('featured_article_1'), {controller: "articles", action: "show", params: {uri: "http://platform.od4d.org/posts/43"}} %></p>
+          <p class="news-txt-larger"><%= link_to t('featured_article_1'), {controller: "articles", action: "show", params: {uri: "http://platform.od4d.org/posts/"+t('featured_article_1_linkid')}} %></p>
       </div>
 
       <div class="destaque2gov grid-33">
@@ -216,7 +216,7 @@
               <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_1') %></h4>
               <p><%= raw t('cases_text_1') %></p>
-                <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/8'}}, class: 'casos-praticos-link' %>
+                <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/'+t('cases_tab_1_linkid')}}, class: 'casos-praticos-link' %>
             </div>
           </div>
           <div>
@@ -224,7 +224,7 @@
               <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_2') %></h4>
               <p><%= t('cases_text_2') %></p>
-              <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/33'}}, class: 'casos-praticos-link' %>
+              <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/'+t('cases_tab_2_linkid')}}, class: 'casos-praticos-link' %>
             </div>
           </div>
           <div>
@@ -232,7 +232,7 @@
               <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_3') %></h4>
               <p><%= t('cases_text_3') %></p>
-              <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/48'}}, class: 'casos-praticos-link' %>
+              <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/'+t('cases_tab_3_linkid')}}, class: 'casos-praticos-link' %>
             </div>
           </div>
           <div>
@@ -240,7 +240,7 @@
               <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_4') %></h4>
               <p><%= t('cases_text_4') %></p>
-              <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/1'}}, class: 'casos-praticos-link' %>
+              <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/'+t('cases_tab_4_linkid')}}, class: 'casos-praticos-link' %>
             </div>
           </div>
           <div>
@@ -248,7 +248,7 @@
               <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_5') %></h4>
               <p><%= t('cases_text_5') %></p>
-              <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/30'}}, class: 'casos-praticos-link' %>
+              <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/'+t('cases_tab_5_linkid')}}, class: 'casos-praticos-link' %>
             </div>
           </div>
       </div>
