--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,14 +30,14 @@
               <li><%= link_to t('menu_6_2'), {controller: "articles", action: "filter", field: "articleSection", term: t('section_products') }%></li>
           </ul>
         </li>
-<!--         <li>
-          <a class="dropdown" href=""><%#= t('menu_7') %></a>
+         <li>
+          <a class="dropdown" href=""><%= t('menu_7') %></a>
           <ul class="submenu">
-              <li><%#= link_to t('menu_7_1'), {controller: "articles", action: "filter", field: "articleSection", term: "Conferences"} %></li>
-              <li><%#= link_to t('menu_7_2'), {controller: "articles", action: "filter", field: "articleSection", term: "Courses"} %></li>
-              <li><%#= link_to t('menu_7_3'), {controller: "articles", action: "filter", field: "articleSection", term: "Contests"} %></li>
+              <li><%= link_to t('menu_7_1'), {controller: "articles", action: "filter", field: "articleSection", term: t('menu_7_1')} %></li>
+              <li><%= link_to t('menu_7_2'), {controller: "articles", action: "filter", field: "articleSection", term: t('menu_7_2')} %></li>
+              <li><%= link_to t('menu_7_3'), {controller: "articles", action: "filter", field: "articleSection", term: t('menu_7_3')} %></li>
           </ul>
-        </li> -->
+        </li>
         <li><a href="/casein"><span class="login">LOGIN</span></a></li>
       </ul>
     </nav>
