fixed HTML5-related issues

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -213,7 +213,7 @@
       <div class="resp-tabs-container bggreen">
           <div class="text-tab clearfix">
             <div class="text-tab clearfix">
-              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" alt="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_1') %></h4>
               <p><%= raw t('cases_text_1') %></p>
                 <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/'+t('cases_tab_1_linkid')}}, class: 'casos-praticos-link' %>
@@ -221,7 +221,7 @@
           </div>
           <div>
               <div class="text-tab clearfix">
-              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" alt="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_2') %></h4>
               <p><%= t('cases_text_2') %></p>
               <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/'+t('cases_tab_2_linkid')}}, class: 'casos-praticos-link' %>
@@ -229,7 +229,7 @@
           </div>
           <div>
               <div class="text-tab clearfix">
-              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" alt="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_3') %></h4>
               <p><%= t('cases_text_3') %></p>
               <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/'+t('cases_tab_3_linkid')}}, class: 'casos-praticos-link' %>
@@ -237,7 +237,7 @@
           </div>
           <div>
               <div class="text-tab clearfix">
-              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" alt="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_4') %></h4>
               <p><%= t('cases_text_4') %></p>
               <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/'+t('cases_tab_4_linkid')}}, class: 'casos-praticos-link' %>
@@ -245,7 +245,7 @@
           </div>
           <div>
               <div class="text-tab clearfix">
-              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" title="This is a placeholder image" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" alt="This is a placeholder image" class="img-tab" />
               <h4><%= t('cases_headline_5') %></h4>
               <p><%= t('cases_text_5') %></p>
               <%= link_to t('cases_more_link'), {controller: "articles", action: "show", params: {uri: 'http://platform.od4d.org/posts/'+t('cases_tab_5_linkid')}}, class: 'casos-praticos-link' %>
