--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -42,7 +42,7 @@
       <h3><%=t 'follow_us' %></h3>
       <%= render :partial => '/layouts/followus', locals: {footer: true} %>
       <div class="fb-like" data-href="https://www.facebook.com/opendata4dev" data-width="208" data-layout="standard" data-action="like" data-show-faces="true" data-share="false"></div>
-      <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fopendata4dev&amp;width=208&amp;layout=standard&amp;action=like&amp;show_faces=true&amp;share=false&amp;height=80&amp;appId=222702521261155" class="fb-iframe" allowTransparency="true"></iframe>
+      <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fopendata4dev&amp;width=208&amp;layout=standard&amp;action=like&amp;show_faces=true&amp;share=false&amp;height=80&amp;appId=222702521261155" class="fb-iframe"></iframe>
     </div>
   </div>
   <footer class="mainfooter">
